# Sanctifier

./: .env.example  ARCHITECTURE.md  CHANGELOG.md  CHECKSUMS.txt  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  SECURITY.md  SOROBAN_DEPLOYMENT.md  UNSAFE_PRNG_IMPLEMENTATION.md  action.yml  docs-release-process.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  contracts-ci.yml  provenance.yml  publish.yml  release.yml  vscode-release.yml
benchmarks/: data_schemas_perf.py  docs_nav_perf.json  docs_nav_perf.py
contracts/: README.md
contracts/benchmark/: Cargo.toml
contracts/benchmark/src/: budgets.rs  lib.rs  token.rs  vesting.rs
contracts/kani-poc/: Cargo.toml
contracts/my-contract/: Cargo.toml
contracts/my-contract/fuzz/: Cargo.toml
contracts/my-contract/fuzz/fuzz_targets/: fuzz_cross_contract.rs
contracts/proxy/: Cargo.toml
contracts/reentrancy-guard/: Cargo.toml
contracts/runtime-guard-wrapper/: README.md
contracts/scripts/: testnet-deploy.sh
contracts/token-with-bugs/: Cargo.toml
contracts/token-with-bugs/src/: lib.rs
data/: release-manifest.json  vulnerability-db.json
data/ security-review/: owners.yaml
data/sarif/: rule-metadata.yaml  severity-map.yaml
data/security-review/: checklist.yaml  defaults.yaml
docs/: DEPLOYMENT_IMPLEMENTATION.md  QUICK_REFERENCE.md  SARIF_METADATA.md  SECURITY_REVIEW_PROCESS.md  SEVERITY_MAPPING.md  api-reference-generation.md  ci-cd-setup.md  contract-interfaces.md  contracts-ci.md  data-schemas-performance.md  deployment-config.md  docs-navigation-performance.md  docs-specs-ci-coverage.md  formal-verification-video-series.md  getting-started.md  github-action-support-matrix.md  github-action-threat-model.md  kani-integration.md  provenance-verification.md  release-artifacts-threat-model.md  runtime-guards-integration.md  schema-pipeline-bindings-notes.md  security-threat-model.md  soroban-deployment.md  troubleshooting-guide.md  vulnerability-database-format.md  wasm-security-hardening.md  wasm-versioning-alignment.md
frontend/: README.md  package-lock.json  package.json
frontend/.husky/: pre-commit
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/docs/: offline-dev-mode.md  report-export.md
frontend/tests/: ui-integration.test.ts  (+1 more)
my-contract/: Cargo.toml
schemas/: analysis-output.json  sanctifier.json  sarif-rule-metadata.schema.json  security-review.schema.json  severity-taxonomy.schema.json  vulnerability-db.json
scripts/: action_inputs.py  action_summary.py  build-contracts.sh  deploy-soroban-testnet.sh  gen-contract-docs.sh  generate-provenance.sh  resolve_action_version.py  setup.sh  validate-runtime-guards.sh  validate_db.js  validate_docs_specs.js  validate_release_artifacts.js  verify-artifacts.sh
tests/: data_validation.rs  release-process.test.ts  schema_validation.rs
tooling/sanctifier-core/: Cargo.toml
tooling/sanctifier-core/benches/: benchmark.rs
tooling/sanctifier-core/src/: analysis_cache.rs  complexity.rs  custom_yaml_rules.rs  event_analysis.rs  finding_codes.rs  gas_estimator.rs  gas_report.rs  input_validation.rs  lib.rs  reentrancy.rs  sdk_version.rs  sep41.rs  smt.rs  upgrade_analysis.rs
tooling/sanctifier-core/src/rules/: auth_gap.rs  ledger_size.rs  missing_state_event.rs  mod.rs  panic_detection.rs  reentrancy.rs  shadow_storage.rs  storage_update_state_check.rs  truncation_bounds.rs  unchecked_external_call.rs
tooling/sanctifier-core/tests/: cache_integration_test.rs  concurrency_determinism_test.rs  integration_token_test.rs  smt_latency_benchmark.rs
tooling/sanctifier-wasm/: Cargo.toml  README.md
tooling/sanctifier-wasm/pkg/: index.js  package.json
tooling/sanctifier-wasm/scripts/: sync-pkg-version.js  verify-csp-compliance.js
tooling/sanctifier-wasm/src/: analysis.rs  constants.rs  converters.rs  lib.rs  types.rs  validation.rs
tooling/sanctifier-wasm/tests/: wasm_tests.rs
vscode-extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json
(+228 files in other folders)
