[package]
name = "sanctifier-core"
version = "0.1.0"
edition = "2021"
description = "Core analysis logic for Sanctifier"
homepage = "https://github.com/HyperSafeD/Sanctifier"
repository = "https://github.com/HyperSafeD/Sanctifier"
license = "MIT"
keywords = ["stellar", "soroban", "security", "analysis"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
soroban-sdk = "20.5.0" # Target latest Soroban SDK
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10.3"
z3 = "0.12.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
