[workspace]
members = ["."]

[package]
name = "sanctifier-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for the Sanctifier analysis engine"
license = "MIT"

# npm package metadata — consumed by wasm-pack
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "sanctifier_wasm"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
# Skip the smt (z3) feature — z3's C library cannot compile to wasm32
sanctifier-core = { path = "../sanctifier-core", default-features = false }
